# tigris

./: .gitattributes  .gitignore  Main.lean  PP.lean  README.md  Tigris.lean  Tigrisc.lean  Tigrisl.lean  church-scott.ml  church-scott.tig  expr.tig  ffi.lisp  lake-manifest.json  lakefile.lean  list.tig  list.tig.lisp  opt.tig  opt.tig.lisp  std.ml  std.tig  test-1.ml  test-1.tig  unsound.tig
.github/workflows/: lean_action_ci.yml
DTigris/: CHANGELOG.md  DTigris.cabal  cabal.project.freeze
DTigris/src/: Abstract.hs  Lexing.hs  Parsing.hs
PP/: dependentPP.lean  ffidecl.lean
Tigris/: lexing.lean  table.lean  utils.lean
Tigris/codegen/: sbcl.lean
Tigris/core/: anf.lean  ftransform.lean  ir.lean  lam.lean  lift.lean  matchApp.lean  matchAppBT.lean  matchAppDT.lean  matchAppF.lean  opt.lean  optTuple.lean  transform.lean  transformT.lean
Tigris/coreL/: join.lean  lam.lean  lift.lean  opt.lean  transform.lean
Tigris/cps/: copt.lean  cps.lean  ctransform.lean
Tigris/interpreter/: app.lean  entrypoint.lean  eval.lean  lapp.lean  leval.lean  types.lean
Tigris/oldcore/: ir.lean  matchApp.lean  opt.lean  transform.lean
Tigris/parsing/: pexp.lean  pexpRaw.lean.bk  pexpSimple.lean  pexpSimpleRaw.lean.bk  ppat.lean  ptype.lean  types.lean
c/: ffi.c
examples/: cont.tig  cont.tig.lisp  fact.tig  fact.tig.lisp  fun.tig  fun.tig.lisp  hkt.tig  list.tig.lisp  mutual.tig  mutual.tig.lisp  opt.tig.lisp  test-1.tig  typeclass.tig  typeclass2.tig  typeclass3.tig  typeclass4.tig  typeclass4.tig.lisp  typeclass5.tig  typeclass5.tig.lisp  unsound.tig
(+9 files in other folders)
